# h5cooking

./: .gitmodules  .mxproject  CMakeLists.txt  H5cocking.ioc  compile_commands.json
AZURE_RTOS/App/: app_azure_rtos.c  app_azure_rtos.h  app_azure_rtos_config.h
Core/Inc/: app_threadx.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h
Core/Src/: app_threadx.c  main.c  stm32h5xx_it.c
Core/src/: app_threadx.c  stm32h5xx_hal_timebase_tim.c  stm32h5xx_it.c
apps/blinky_green/: CMakeLists.txt  main.c
apps/blinky_red/: CMakeLists.txt  main.c
apps/blinky_red/inc/: app_threadx.h  appmain.h
apps/blinky_yellow/: CMakeLists.txt  main.cpp
apps/blinky_yellow/inc/: main.hpp
bsp/: CMakeLists.txt
bsp/Inc/: stm32h5xx_hal_conf.h  stm32h5xx_it.h
bsp/NUCLEO_STM32H563/: CMakeLists.txt
bsp/NUCLEO_STM32H563/src/: app_azure_rtos.c  app_threadx.c  main.c  stm32h5xx_hal_msp.c  stm32h5xx_hal_timebase_tim.c  stm32h5xx_it.c  stm32h5xx_nucleo.c  stm32h5xx_nucleo_usbpd_pwr.c  syscalls.c
cmake/: gcc-arm-none-eabi.cmake
cmake/CMSIS_6/: CMakeLists.txt
cmake/cmsis-device-h5/: CMakeLists.txt
cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
cmake/stm32h5xx-hal-driver/: CMakeLists.txt
